--- a/spec/android/input/dependencies.gradle
+++ b/spec/android/input/dependencies.gradle
@@ -1,36 +1,9 @@
-apply plugin: 'com.android.application'
-// For Dagger2
-apply plugin: 'com.neenbedankt.android-apt'
-// For Realm
-apply plugin: 'realm-android'
-
-android {
-    compileSdkVersion rootProject.ext.compileSdkVersion
-    buildToolsVersion rootProject.ext.buildToolsVersion
-
-    defaultConfig {
-        applicationId "<%= package_name %>"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-}
-
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-
-    apt "com.google.dagger:dagger-compiler:${daggerVersion}"
-    compile "com.google.dagger:dagger:${daggerVersion}"
-
-    compile("com.afollestad.material-dialogs:core:0.8.6.1") {
-        transitive = true
-    }
+    compile "com.android.support:appcompat-v7:${supportLibrariesVersion}"
+    compile "com.jakewharton:butterknife:${butterKnifeVersion}"
+    apt "com.jakewharton:butterknife-compiler:${butterKnifeVersion}"
+    compile "com.google.dagger:dagger:${dagger2Version}"
+    apt "com.google.dagger:dagger-compiler:${dagger2Version}"
+    compile "com.google.android.gms:play-services-auth:${playServiceVersion}"
+    compile "com.facebook.android:facebook-android-sdk:${facebookSdkVersion}"
 }
