--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 # rspec failure tracking
 .rspec_status
 .DS_Store
+
+!packaging/
+packaging/*
+!packaging/bundler-config
+!packaging/wrapper.sh
+android-codegen-0.*
