--- a/lib/android/boilerplate/templates/mvp-boilerplate/app/build.gradle
+++ b/lib/android/boilerplate/templates/mvp-boilerplate/app/build.gradle
@@ -7,8 +7,8 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "<%= package_name %>"
-        minSdkVersion 15
-        targetSdkVersion 25
+        minSdkVersion <%= min_sdk %>
+        targetSdkVersion <%= target_sdk %>
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
